004-09-23  Andrew Pinski  <pinskia@physics.uc.edu>

PR c++/17618
        * cvt.c (cp_convert_to_pointer): Return early when the type is
        an error_mark_node.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@87978 138bc75d-0d04-0410-961f-82ee72b054a4